Made color notation consistent and shorter. Fixed missing whitespace CSS

--- a/skirmish.css
+++ b/skirmish.css
@@ -12,7 +12,7 @@ body {
     height: 120vh;
     position: absolute;
     left: 0%;
-    border-right: "1px solid #000000";
+    border-right: 1px solid #000;
 }
 
 #map {
@@ -27,17 +27,17 @@ body {
 
 /*Screen theming begin*/
 .LightMode #map {
-    background-color: #FFFFFF;
+    background-color: #FFF;
 }
 .LightMode #sidepanel {
-    background-color: #FFFFFF;
+    background-color: #FFF;
 }
 
 .DarkMode1 #map {
-    background-color: #353b45;
+    background-color: #353B45;
 }
 .DarkMode1 #sidepanel {
-    background-color: #21252b;
+    background-color: #21252B;
 }
 
 .DarkMode2 #map {
@@ -61,38 +61,38 @@ body {
 }
 
 #DarkMode1Button {
-    order:1;
+    order: 1;
     flex-grow: 1;
     display: none;
 }
 
 #DarkMode2Button {
-    order:1;
+    order: 1;
     flex-grow: 1;
     display: none;
 }
 
 #LightModeButton {
-    order:1;
+    order: 1;
     flex-grow: 1;
     display: none;
 }
 
 
 #SpawnRedButton {
-    order:2;
-    flex-grow:1;
+    order: 2;
+    flex-grow: 1;
 }
 
 #SpawnBlueButton {
-    order:3;
-    flex-grow:1;
+    order: 3;
+    flex-grow: 1;
 }
 
 
 
 /*Buttons theming begin*/
-.LightMode  #DarkMode1Button {
+.LightMode #DarkMode1Button {
     display: block;
 }
 .DarkMode1 .DarkMode2 #DarkMode1Button {
@@ -130,11 +130,11 @@ body {
 }
 
 .Blue {
-    background: #0000FF;
+    background: #00F;
 }
 
 .Red {
-    background: #ff0000;
+    background: #f00;
 }
 
 .SmallBlob {
@@ -225,16 +225,21 @@ body {
 }
 
 /*Blobs theming begin*/
-.LightMode .Blob:hover, .LightMode .SelectedP1, .LightMode .SelectedP2 {
-    border: 1px solid #000000;
+.LightMode .Blob:hover,
+.LightMode .Blob.Selected {
+    border: 1px solid #000;
 }
 
-.DarkMode1 .Blob:hover, .DarkMode1 .SelectedP1, .DarkMode1 .SelectedP2 {
-    border: 1.5px solid #000000;
+.DarkMode1 .Blob:hover,
+.DarkMode1 .Blob.Selected {
+    border: 1.5px solid #000;
 }
 
-.DarkMode2 .Blob:hover, .DarkMode2 .SelectedP1, .DarkMode2 .SelectedP2 {
-    border: 1.5px solid #000000;
+.DarkMode2 .Blob:hover,
+.DarkMode2 .Blob.Selected {
+    border: 1.5px solid #000;
+}
+
 }
 /*Blobs theming end*/
 /* |||||||||||||||||||||||||||||||||| Blobs end*/
